feat: improved index page style

--- a/2.html
+++ b/2.html
@@ -20,6 +20,9 @@
             align-items: center;
 
             background-color: rgb(7, 224, 0);
+
+            opacity: 1;
+            transition: opacity .3s ease-in-out;
         }
 
         .loader{
@@ -36,10 +39,10 @@
         }
     </style>
     
-    <script type="module" crossorigin src="/assets/planet2.296d4331.js"></script>
+    <script type="module" crossorigin src="/assets/planet2.d9058bf1.js"></script>
     <link rel="modulepreload" href="/assets/strega_bg.a0dc8f16.js">
-    <link rel="modulepreload" href="/assets/Lensflare.fbfcbbf5.js">
-    <link rel="stylesheet" href="/assets/strega_bg.0a813d4f.css">
+    <link rel="modulepreload" href="/assets/Lensflare.e251edb4.js">
+    <link rel="stylesheet" href="/assets/strega_bg.0a6404d1.css">
   </head>
   
   <body style="overflow-x: hidden;">
