--- a/5.html
+++ b/5.html
@@ -24,6 +24,9 @@
             align-items: center;
 
             background-color: rgb(250, 71, 0);
+
+            opacity: 1;
+            transition: opacity .3s ease-in-out;
         }
 
         .loader{
@@ -40,10 +43,10 @@
         }
     </style>
     
-    <script type="module" crossorigin src="/assets/planet5.e324c605.js"></script>
+    <script type="module" crossorigin src="/assets/planet5.05ede842.js"></script>
     <link rel="modulepreload" href="/assets/strega_bg.a0dc8f16.js">
-    <link rel="modulepreload" href="/assets/Lensflare.fbfcbbf5.js">
-    <link rel="stylesheet" href="/assets/strega_bg.0a813d4f.css">
+    <link rel="modulepreload" href="/assets/Lensflare.e251edb4.js">
+    <link rel="stylesheet" href="/assets/strega_bg.0a6404d1.css">
   </head>
   
   <body style="overflow-x: hidden;">
