--- a/space.html
+++ b/space.html
@@ -28,6 +28,9 @@
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-position: center center;
+
+                opacity: 1;
+                transition: opacity .3s ease-in-out;
             }
 
             .loader{
@@ -44,10 +47,10 @@
             }
         </style>
 
-      <script type="module" crossorigin src="/assets/space.7011b73f.js"></script>
+      <script type="module" crossorigin src="/assets/space.7ed52251.js"></script>
       <link rel="modulepreload" href="/assets/strega_bg.a0dc8f16.js">
-      <link rel="modulepreload" href="/assets/Lensflare.fbfcbbf5.js">
-      <link rel="stylesheet" href="/assets/strega_bg.0a813d4f.css">
+      <link rel="modulepreload" href="/assets/Lensflare.e251edb4.js">
+      <link rel="stylesheet" href="/assets/strega_bg.0a6404d1.css">
     </head>
   
     <body style="overflow-x: hidden;">
